loading picture url fix from json db

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div
   class="min-h-screen bg-cover bg-center flex items-center justify-center"
-  style="background-image: url('/assets/image/login-bg.jpg')"
+  style="background-image: url('login.jpg')"
 >
   <div class="bg-white bg-opacity-90 p-8 rounded-xl shadow-lg w-full max-w-md">
     <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login</h2>
