--- a/src/app/components/cattleedit/cattleedit.component.html
+++ b/src/app/components/cattleedit/cattleedit.component.html
@@ -126,7 +126,7 @@
               Click to upload an image
             </span>
             <span class="text-sm text-gray-700" *ngIf="selectedFile">
-              {{ selectedFile?.name }}
+              {{ selectedFile.name }}
             </span>
           </div>
           <input
